Actualizadas las traducciones.

--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -631,6 +631,7 @@
     "export-bill": "Factura d'exportació",
     "extra-file": "Arxiu extra",
     "failed": "Fallit",
+    "fails": "Fallos",
     "families": "Famílies",
     "family": "Família",
     "family-code": "Codi de família",
@@ -894,6 +895,7 @@
     "last-activity": "Última activitat",
     "last-bimester": "El bimestre passat",
     "last-block": "Darrer bloc",
+    "last-duration": "Última duración",
     "last-ip": "Darrera IP",
     "last-month": "El mes passat",
     "last-price-estimation": "Últim preu de pressupost",
@@ -1384,6 +1386,7 @@
     "roles": "Grups",
     "rules": "Regles",
     "run": "Executar",
+    "running": "Ejecutando",
     "running-plugin-cron": "S'està executant FacturaScripts cron per al connector %pluginName%",
     "running-work-queue": "Executant la cua d'esdeveniments de treball",
     "sales": "Vendes",
