--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -631,6 +631,7 @@
     "export-bill": "Exportationsrechnung",
     "extra-file": "Extra Datei",
     "failed": "Fehlgeschlagen",
+    "fails": "Fallos",
     "families": "Familien",
     "family": "Familie",
     "family-code": "Familiencode",
@@ -822,7 +823,7 @@
     "invalid-number": "Ungültige Nummer",
     "invalid-request": "Antrag nicht gültig",
     "invalid-token": "Ungültiges Token",
-    "invalid-token-p": "El token de acceso para el archivo %file% no es válido o ha caducado",
+    "invalid-token-p": "Das Zugriffstoken für die Datei %file% ist ungültig oder abgelaufen.",
     "invalid-user-can-permission": "Ungültige Berechtigung: %permission%. Die verfügbaren Berechtigungen sind access, delete, export, import, update und only-owner-data.",
     "invalid-web": "Ungültige Webadresse",
     "invoice": "Rechnung",
@@ -894,6 +895,7 @@
     "last-activity": "Letzte Aktivität",
     "last-bimester": "Letztes Bimester",
     "last-block": "Letzter Bolck",
+    "last-duration": "Última duración",
     "last-ip": "Letzte IP",
     "last-month": "Letzter Monat",
     "last-price-estimation": "Letzte Preisabschätzung",
@@ -1384,6 +1386,7 @@
     "roles": "Rollen",
     "rules": "Regeln",
     "run": "Ausführen",
+    "running": "Ejecutando",
     "running-plugin-cron": "Führe FacturaScripts Cron für das Plugin %pluginName% aus",
     "running-work-queue": "Die Arbeitsereignisschleife wird ausgeführt",
     "sales": "Der Umsatz",
@@ -1678,7 +1681,7 @@
     "unlink-install-ok": "Installation erfolgreich aus dem Register gelöscht.",
     "unlock-entry": "Eintrag entsperren",
     "unpaid": "Unbezahlt",
-    "unsafe-file": "Archivo no seguro",
+    "unsafe-file": "Unsicherer Datei",
     "unsafe-file-p": "Aus Sicherheitsgründen verhindern wir das Herunterladen bestimmter Dateitypen, wie diese: %file%",
     "until-accounting-entry": "Bis Buchung",
     "until-date": "bis-Datum",
