--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -2,7 +2,7 @@
     "2fa": "2FA",
     "abbreviated": "Abbreviated",
     "about": "About",
-    "acc-concept-required": "You must first enter the entry concept",
+    "acc-concept-required": "You must first enter the concept of the entry.",
     "accept": "Accept",
     "accept-all": "Accept all",
     "accept-data": "Accept changes or operation",
@@ -631,6 +631,7 @@
     "export-bill": "export-bill",
     "extra-file": "Extra file",
     "failed": "Failed",
+    "fails": "Failures",
     "families": "Families",
     "family": "Family",
     "family-code": "Family code",
@@ -894,6 +895,7 @@
     "last-activity": "Last activity",
     "last-bimester": "Last bimester",
     "last-block": "Last block",
+    "last-duration": "Última duración",
     "last-ip": "Last IP",
     "last-month": "Last month",
     "last-price-estimation": "Last quote price",
@@ -1384,6 +1386,7 @@
     "roles": "Roles",
     "rules": "Rules",
     "run": "Run",
+    "running": "Running",
     "running-plugin-cron": "Running FacturaScripts cron for plugin %pluginName%",
     "running-work-queue": "Running the work event queue.",
     "sales": "Sales",
@@ -1533,7 +1536,7 @@
     "subtotal": "Subtotal",
     "subtract": "Subtract",
     "success": "Success",
-    "successive-tract": "successive-tract",
+    "successive-tract": "Successive Tract",
     "sum": "Sum",
     "sum-netos-line-tax-must-be": "The sum of the net of the VAT lines should be: %lineNet%",
     "sum-total-line-tax-must-be": "The sum of the VAT totals of the VAT lines should be: %lineTotalTax%",
