--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -631,6 +631,7 @@
     "export-bill": "Esportazio faktura",
     "extra-file": "Fitxategi gehigarria",
     "failed": "Huts egin",
+    "fails": "Porrotak",
     "families": "Familiak",
     "family": "Familia",
     "family-code": "Familia kodea",
@@ -672,7 +673,7 @@
     "fixed-value": "Balio finkoa",
     "flag": "Ikurra",
     "folder-not-writable": "FacturaScripts karpetan ezin da idatzi.",
-    "folders-not-writable": "No se puede escribir sobre la carpeta de FacturaScripts: %folders%",
+    "folders-not-writable": "Ez da idatzi dezakezu FacturaScripts direktorietan: %folders%",
     "font": "Letra-mota",
     "font-size": "Letra-tipoaren tamaina",
     "footer": "Orri oina",
@@ -894,6 +895,7 @@
     "last-activity": "Azken konexioa",
     "last-bimester": "Aurreko bihilekoan",
     "last-block": "Azkenengo blokea",
+    "last-duration": "Última duración",
     "last-ip": "Azken IPa",
     "last-month": "Aurreko hilabetean",
     "last-price-estimation": "Azken aurrekontuaren prezioa",
@@ -1384,6 +1386,7 @@
     "roles": "Taldeak",
     "rules": "Arauak",
     "run": "Exekutatu",
+    "running": "Exekutatzen",
     "running-plugin-cron": "FacturaScripts %pluginName% pluginaren cron exekutatzen",
     "running-work-queue": "Lanen ekitaldietako ilara exekutatzen",
     "sales": "Salmentak",
