--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -631,6 +631,7 @@
     "export-bill": "Factura de exportación",
     "extra-file": "Arquivo extra",
     "failed": "Fallo",
+    "fails": "Fallos",
     "families": "Familias",
     "family": "Familia",
     "family-code": "Código familiar",
@@ -672,7 +673,7 @@
     "fixed-value": "Valor fixo",
     "flag": "Bandeira",
     "folder-not-writable": "Non pode escribir sobre cartafol FacturaScripts.",
-    "folders-not-writable": "Non se pode escribir sobre as carpetas de FacturaScripts: %folders%",
+    "folders-not-writable": "Non se pode escribir nas carpetas de FacturaScripts: %folders%",
     "font": "Fonte",
     "font-size": "Tamaño de fonte",
     "footer": "Pe de páxina",
@@ -894,6 +895,7 @@
     "last-activity": "Última actividade",
     "last-bimester": "O pasado bimestre",
     "last-block": "Último bloque",
+    "last-duration": "Última duración",
     "last-ip": "Última IP",
     "last-month": "O mes pasado",
     "last-price-estimation": "Último prezo de orzamento",
@@ -1228,7 +1230,7 @@
     "plugin-update": "Actualización do plugin %pluginName% á versión %version%",
     "plugins": "Plugins",
     "plugins-p": "Os  plugins permiten engadir novas funcións. Activa os que necesites agora, ou ben faino cando queiras desde o menú administrador.",
-    "plugins-required": "Plugins requiridos",
+    "plugins-required": "Plugins requeridos",
     "points": "puntos",
     "points-of-interest": "Puntos de interese",
     "port": "Porto",
@@ -1384,6 +1386,7 @@
     "roles": "Roles",
     "rules": "Reglas",
     "run": "Executar",
+    "running": "Ejecutando",
     "running-plugin-cron": "Executando cron do plugin %pluginName%",
     "running-work-queue": "Executando a cola de eventos de traballo",
     "sales": "Vendas",
