--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -575,7 +575,7 @@
     "error-write-cert": "Errore durante la scrittura del certificato",
     "errors": "errori",
     "es_EC": "Spagnolo (Ecuador)",
-    "es-tax-exception-art-14": "es-tax-exception-art-14",
+    "es-tax-exception-art-14": "eccezione fiscale art. 14",
     "es-tax-exception-art-7": "eccezione fiscale-es-art-7",
     "es-tax-exception-e1": "Spagna: eccezione per l'articolo 20 della legge sull'IVA",
     "es-tax-exception-e2": "Spagna: eccezione per l'articolo 21 della legge sull'IVA",
@@ -592,7 +592,7 @@
     "es-tax-regime-general": "Regime generale",
     "es-tax-regime-gold": "Regime speciale dell'oro di investimento",
     "es-tax-regime-group-entities": "Regime fiscale speciale per il gruppo di entità",
-    "es-tax-regime-one-stop-shop-ioss": "es-tax-regime-one-stop-shop-ioss",
+    "es-tax-regime-one-stop-shop-ioss": "regime fiscale one-stop-shop ios",
     "es-tax-regime-one-stop-shop-oss": "regime fiscale-es-sportello unico-oss",
     "es-tax-regime-simplified": "Regime fiscale semplificato",
     "es-tax-regime-special-retail-traders": "es-tax-regime-special-retail-traders",
@@ -631,6 +631,7 @@
     "export-bill": "fattura di esportazione",
     "extra-file": "File aggiuntivo",
     "failed": "Fallito",
+    "fails": "Fallos",
     "families": "famiglie",
     "family": "Famiglia",
     "family-code": "Codice famiglia",
@@ -894,6 +895,7 @@
     "last-activity": "L'ultima attività",
     "last-bimester": "ultimo bimestre",
     "last-block": "ultimo blocco",
+    "last-duration": "Ultima durata",
     "last-ip": "Ultimo IP",
     "last-month": "mese scorso",
     "last-price-estimation": "Ultima stima del prezzo",
@@ -1384,6 +1386,7 @@
     "roles": "ruoli",
     "rules": "Regole",
     "run": "eseguire",
+    "running": "Ejecutando",
     "running-plugin-cron": "Esecuzione del cron del plugin %pluginName%",
     "running-work-queue": "Esecuzione della coda degli eventi di lavoro",
     "sales": "I saldi",
