--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -631,6 +631,7 @@
     "export-bill": "Faktura eksportowa",
     "extra-file": "Dodatkowy plik",
     "failed": "Niepowodzenie",
+    "fails": "Fallos",
     "families": "Rodziny",
     "family": "Rodzina",
     "family-code": "Kod rodziny",
@@ -894,6 +895,7 @@
     "last-activity": "Ostatnia aktywność",
     "last-bimester": "Ostatni bimestre",
     "last-block": "Ostatni blok",
+    "last-duration": "Última duración",
     "last-ip": "Ostatni adres IP",
     "last-month": "W zeszłym miesiącu",
     "last-price-estimation": "Ostatnia szacunkowa cena",
@@ -1124,7 +1126,7 @@
     "opened": "Otwarty",
     "opening-acounting-completed": "Prawidłowe otwarcie ćwiczenia",
     "opening-operation": "Otwarcie",
-    "operating-system": "Sistema Operativo",
+    "operating-system": "System operacyjny",
     "operation": "Operacja",
     "operation-export": "Operación exportación",
     "operator": "Operator",
@@ -1384,6 +1386,7 @@
     "roles": "Role",
     "rules": "Zasady",
     "run": "Uruchom",
+    "running": "Ejecutando",
     "running-plugin-cron": "Uruchamianie cron wtyczki %pluginName%",
     "running-work-queue": "Uruchamianie kolejki zadań roboczych",
     "sales": "Sprzedaż",
@@ -1777,7 +1780,7 @@
     "years": "Lata",
     "yes": "Tak",
     "yesterday": "Wczoraj",
-    "you-can-sort-images": "Puedes ordenar las imágenes arrastrándolas",
+    "you-can-sort-images": "Możesz sortować obrazy, przeciągając je",
     "you-cant-delete-primary-variant": "Nie możesz usunąć głównej warianty produktu",
     "you-sent-a-audio": "Enviaste un audio",
     "you-sent-a-document": "Enviaste un documento",
