--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -631,6 +631,7 @@
     "export-bill": "Fatura de exportação",
     "extra-file": "Arquivo extra",
     "failed": "Falha",
+    "fails": "Falhas",
     "families": "Famílias",
     "family": "Família",
     "family-code": "Código de família",
@@ -821,7 +822,7 @@
     "invalid-iso-code": "Código ISO '%iso-code%' inválido",
     "invalid-number": "Número não válido: %number%",
     "invalid-request": "Solicitação inválida",
-    "invalid-token": "Token no válido",
+    "invalid-token": "Token inválido",
     "invalid-token-p": "O token de acesso para o arquivo %file% não é válido ou expirou",
     "invalid-user-can-permission": "Permissão inválida: %permission%. As permissões disponíveis são access, delete, export, import, update e only-owner-data.",
     "invalid-web": "E",
@@ -894,6 +895,7 @@
     "last-activity": "Última atividade",
     "last-bimester": "O bimestre passado",
     "last-block": "Último bloco",
+    "last-duration": "Última duración",
     "last-ip": "Último IP",
     "last-month": "O último mês",
     "last-price-estimation": "Último preço de orçamento",
@@ -1384,6 +1386,7 @@
     "roles": "Funções",
     "rules": "Regras",
     "run": "executar",
+    "running": "Ejecutando",
     "running-plugin-cron": "Executando o cron do plugin %pluginName%",
     "running-work-queue": "Executando a fila de eventos de trabalho",
     "sales": "Vendas",
@@ -1442,7 +1445,7 @@
     "serierb": "Série RB",
     "series": "Séries",
     "server": "Servidor",
-    "server-accepts-filesize": "Tamaño máx. subida archivos",
+    "server-accepts-filesize": "Tamanho máximo de upload de arquivos",
     "server-software": "Software do servidor",
     "service": "Serviço",
     "services": "Serviços",
