--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -631,6 +631,7 @@
     "export-bill": "Fatura de exportação",
     "extra-file": "Arquivo extra",
     "failed": "Falhado",
+    "fails": "Falhas",
     "families": "Famílias",
     "family": "Família",
     "family-code": "Código familiar",
@@ -821,7 +822,7 @@
     "invalid-iso-code": "Código ISO '%iso-code%' não válido",
     "invalid-number": "Número não válido: %number%",
     "invalid-request": "Pedido não válido",
-    "invalid-token": "Token no válido",
+    "invalid-token": "Token inválido",
     "invalid-token-p": "O token de acesso para o arquivo %file% não é válido ou está expirado",
     "invalid-user-can-permission": "Permissão inválida: %permission%. As permissões disponíveis são access, delete, export, import, update e only-owner-data.",
     "invalid-web": "E",
@@ -894,6 +895,7 @@
     "last-activity": "Ultima atividade",
     "last-bimester": "Último bimestre",
     "last-block": "Último bloco",
+    "last-duration": "Última duración",
     "last-ip": "Último IP",
     "last-month": "O mês passado",
     "last-price-estimation": "Último preço de orçamento",
@@ -1384,6 +1386,7 @@
     "roles": "Roles",
     "rules": "Regras",
     "run": "executar",
+    "running": "Ejecutando",
     "running-plugin-cron": "Executando o cron do plugin %pluginName%",
     "running-work-queue": "Executando a fila de eventos de trabalho",
     "sales": "Vendas",
