--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -631,6 +631,7 @@
     "export-bill": "Factura d'exportació",
     "extra-file": "Archiu extra",
     "failed": "Fallit",
+    "fails": "Fallos",
     "families": "Famílies",
     "family": "Familia",
     "family-code": "Còdic de la família",
@@ -894,6 +895,7 @@
     "last-activity": "Última activitat",
     "last-bimester": "El bimestre passat",
     "last-block": "last-block",
+    "last-duration": "Última duración",
     "last-ip": "Última IP",
     "last-month": "El més passat",
     "last-price-estimation": "Últim preu de pressupost",
@@ -1384,6 +1386,7 @@
     "roles": "Grups",
     "rules": "Regles",
     "run": "run",
+    "running": "Ejecutando",
     "running-plugin-cron": "S'està eixecutant el cron del plugin %pluginName%",
     "running-work-queue": "Executant la cua d'esdeveniments de treball",
     "sales": "Vendes",
