--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -496,7 +496,7 @@
     "document-type": "Tipo documento",
     "document-type-valid-length": "Tipo de documento no válido (debe tener entre 1 y 20 carácteres).",
     "document-wildcard-info": "Documento indicado en la cabecera del asiento contable",
-    "document-without-total": "Dokument %document% bez celkových nákladů nebo s celkovými náklady 0.",
+    "document-without-total": "Dokument %document% bez celkových částek nebo s celkovou částkou 0.",
     "documentation": "Documentación",
     "documents": "Documentos",
     "documents-generated": "Documentos generados",
@@ -631,6 +631,7 @@
     "export-bill": "Factura de exportación",
     "extra-file": "Archivo extra",
     "failed": "Selhalo",
+    "fails": "Fallos",
     "families": "Familias",
     "family": "Familia",
     "family-code": "Código de la família",
@@ -894,6 +895,7 @@
     "last-activity": "Última conexión",
     "last-bimester": "El pasado bimestre",
     "last-block": "Último bloque",
+    "last-duration": "Última duración",
     "last-ip": "Última IP",
     "last-month": "El mes pasado",
     "last-price-estimation": "Poslední odhad ceny",
@@ -1384,6 +1386,7 @@
     "roles": "Grupos",
     "rules": "Reglas",
     "run": "Ejecutar",
+    "running": "Ejecutando",
     "running-plugin-cron": "Ejecutando cron del plugin %pluginName%",
     "running-work-queue": "Probíhá zpracování událostí pracovního postupu",
     "sales": "Ventas",
