--- a/Core/Translation/es_CR.json
+++ b/Core/Translation/es_CR.json
@@ -631,6 +631,7 @@
     "export-bill": "Factura de exportación",
     "extra-file": "Archivo extra",
     "failed": "Fallido",
+    "fails": "Fallos",
     "families": "Familias",
     "family": "Familia",
     "family-code": "Código de la família",
@@ -894,6 +895,7 @@
     "last-activity": "Última conexión",
     "last-bimester": "El pasado bimestre",
     "last-block": "Último bloque",
+    "last-duration": "Última duración",
     "last-ip": "Última IP",
     "last-month": "El mes pasado",
     "last-price-estimation": "Último precio de presupuesto",
@@ -1384,6 +1386,7 @@
     "roles": "Grupos",
     "rules": "Reglas",
     "run": "Ejecutar",
+    "running": "Ejecutando",
     "running-plugin-cron": "Ejecutando cron del plugin %pluginName%",
     "running-work-queue": "Ejecutando la cola de eventos de trabajo",
     "sales": "Ventas",
