--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -575,7 +575,7 @@
     "error-write-cert": "Erro ao escrever o certificado",
     "errors": "Erros",
     "es_EC": "Espanhol (Equador)",
-    "es-tax-exception-art-14": "es-tax-exception-art-14",
+    "es-tax-exception-art-14": "exceção-fiscal-es-art-14",
     "es-tax-exception-art-7": "exceção de imposto - sujeito passivo",
     "es-tax-exception-e1": "E",
     "es-tax-exception-e2": "Espanha: exceção pelo artigo 21 da Lei do IVA",
@@ -596,7 +596,7 @@
     "es-tax-regime-one-stop-shop-oss": "es-tax-regime-one-stop-shop-oss",
     "es-tax-regime-simplified": "Regime simplificado de imposto",
     "es-tax-regime-special-retail-traders": "es-tax-regime-special-retail-traders",
-    "es-tax-regime-special-small-business": "es-tax-regime-special-small-business",
+    "es-tax-regime-special-small-business": "regime-fiscal-es-pequeno-negócio",
     "es-tax-regime-surcharge": "Sobretaxa de equivalência",
     "es-tax-regime-telecom": "Regimes especiais aplicáveis aos serviços de telecomunicações, de radiodifusão ou de televisão e aos prestados por via eletrônica",
     "es-tax-regime-travel": "Regime especial das agências de viagens",
@@ -930,7 +930,7 @@
     "list": "Lista",
     "load-def-acc-plan": "Carregar plano contabilístico predefinido",
     "loading-controller": "Carregando controlador: '%controllerName%'",
-    "local-business-rental": "Alquiler locales",
+    "local-business-rental": "Aluguel de locais",
     "location": "Localização",
     "lock-accounting": "Bloquear contabilidade",
     "lock-entry": "Bloquear lançamento",
