--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -575,8 +575,8 @@
     "error-write-cert": "Erro ao escrever o certificado",
     "errors": "Erros",
     "es_EC": "Espanhol (Equador)",
-    "es-tax-exception-art-14": "es-tax-exception-art-14",
-    "es-tax-exception-art-7": "es-tax-exception-art-7",
+    "es-tax-exception-art-14": "exceção-fiscal-es-art-14",
+    "es-tax-exception-art-7": "exceção-fiscal-es-art-7",
     "es-tax-exception-e1": "E",
     "es-tax-exception-e2": "Espanha: exceção pelo artigo 21 da Lei do IVA",
     "es-tax-exception-e3": "Espanha: exceção pelo artigo 22 da Lei do IVA",
@@ -596,7 +596,7 @@
     "es-tax-regime-one-stop-shop-oss": "es-tax-regime-one-stop-shop-oss",
     "es-tax-regime-simplified": "Regime simplificado de imposto",
     "es-tax-regime-special-retail-traders": "es-tax-regime-special-retail-traders",
-    "es-tax-regime-special-small-business": "es-tax-regime-special-small-business",
+    "es-tax-regime-special-small-business": "regime-fiscal-es-pequeno-negócio",
     "es-tax-regime-surcharge": "Sobretaxa de regime especial",
     "es-tax-regime-telecom": "R",
     "es-tax-regime-travel": "Regime especial das agências de viagens",
