--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -631,7 +631,7 @@
     "export-bill": "Facture d'exportation",
     "extra-file": "Fichier supplémentaire",
     "failed": "Échoué",
-    "fails": "Fallos",
+    "fails": "Échecs",
     "families": "Des familles",
     "family": "Famille",
     "family-code": "Code familial",
@@ -895,7 +895,7 @@
     "last-activity": "Dernière Activité",
     "last-bimester": "Dernier bimestre",
     "last-block": "Dernier bloc",
-    "last-duration": "Última duración",
+    "last-duration": "Dernière durée",
     "last-ip": "Dernière adresse IP",
     "last-month": "Le mois dernier",
     "last-price-estimation": "Dernière estimation de prix",
@@ -1386,7 +1386,7 @@
     "roles": "Rôles",
     "rules": "Règles",
     "run": "Exécuter",
-    "running": "Ejecutando",
+    "running": "En cours d'exécution",
     "running-plugin-cron": "Exécution de la tâche programmée pour le module %pluginName%",
     "running-work-queue": "Exécution de la file d'attente des événements de travail",
     "sales": "Ventes",
