--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -593,7 +593,7 @@
     "es-tax-regime-gold": "Special regime for investment gold",
     "es-tax-regime-group-entities": "Special regime of the group of entities",
     "es-tax-regime-one-stop-shop-ioss": "IOSS One Stop Shop tax regime",
-    "es-tax-regime-one-stop-shop-oss": "OSS One Stop Shop tax regime",
+    "es-tax-regime-one-stop-shop-oss": "OSS One Stop Shop tax regime.",
     "es-tax-regime-simplified": "Simplified Regime",
     "es-tax-regime-special-retail-traders": "Special retail traders tax regime",
     "es-tax-regime-special-small-business": "Special tax regime for small business",
@@ -1445,7 +1445,7 @@
     "serierb": "Serie RB",
     "series": "Series",
     "server": "Server",
-    "server-accepts-filesize": "Max file upload size",
+    "server-accepts-filesize": "Max file upload size.",
     "server-software": "Server Software",
     "service": "Service",
     "services": "Services",
@@ -1682,7 +1682,7 @@
     "unlock-entry": "Unlock",
     "unpaid": "Unpaid",
     "unsafe-file": "Unsafe File",
-    "unsafe-file-p": "For security reasons, we prevent downloads of certain file types, such as this one: %file%",
+    "unsafe-file-p": "For security reasons, we prevent downloads of certain file types, such as this one: %file%.",
     "until-accounting-entry": "Until entry",
     "until-date": "Until date",
     "until-subaccount": "Until subaccount",
