--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -1453,7 +1453,7 @@
     "settlement": "Likidazioa",
     "settlement-product": "Likidazio produktua",
     "settlements": "Likidazioak",
-    "setup-manually": "Ezarpen magicodun",
+    "setup-manually": "Ezarpen manuala",
     "setup-options": "Konfigurazio aukerak",
     "shipping": "Bidalketa",
     "shipping-address": "Bidaltzeko helbidea",
@@ -1682,7 +1682,7 @@
     "unlock-entry": "Desblokeatu",
     "unpaid": "Ordaindu gabe",
     "unsafe-file": "Fitxategi ez segurua",
-    "unsafe-file-p": "Por motivos de seguridad impedimos las descargas de algunos tipos de archivos, como este: %file%",
+    "unsafe-file-p": "Segurtasun arrazoiak direla eta, ezin dazu deskargatu tipo hauetako fitxategiren bat: %file%",
     "until-accounting-entry": "Idazpenara arte",
     "until-date": "Data arte",
     "until-subaccount": "Azpikontura arte",
