--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -576,7 +576,7 @@
     "errors": "erreurs",
     "es_EC": "Espagnol (Équateur)",
     "es-tax-exception-art-14": "es-tax-exception-art-14",
-    "es-tax-exception-art-7": "es-tax-exception-art-7",
+    "es-tax-exception-art-7": "art 7 d'exception fiscale",
     "es-tax-exception-e1": "Espagne: exception pour l'article 20 de la loi sur la TVA",
     "es-tax-exception-e2": "Espagne: exception pour l'article 21 de la loi sur la TVA",
     "es-tax-exception-e3": "Espagne: exception pour l'article 22 de la loi sur la TVA",
@@ -584,7 +584,7 @@
     "es-tax-exception-e5": "Espagne: exception pour l'article 25 de la loi sur la TVA",
     "es-tax-exception-e6": "Espagne: exception pour une autre raison",
     "es-tax-exception-location-rules": "règles d'exception fiscales espagnoles",
-    "es-tax-exception-passive-subject": "es-tax-exception-passive-subject",
+    "es-tax-exception-passive-subject": "sujet passif d'exception fiscale",
     "es-tax-regime-agrarian": "Régime spécial de l'agriculture, de l'élevage et de la pêche",
     "es-tax-regime-cash-criteria": "Critère de caisse",
     "es-tax-regime-especial-agp": "Régime spécial de l'agriculture, de l'élevage et de la pêche",
