--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -1453,7 +1453,7 @@
     "settlement": "Rozliczenie",
     "settlement-product": "Produkt rozliczeniowy",
     "settlements": "Rozliczenia",
-    "setup-manually": "Configuración manual",
+    "setup-manually": "Konfiguracja ręczna",
     "setup-options": "Konfiguracja opcji",
     "shipping": "Wysyłka",
     "shipping-address": "Adres dostawy",
@@ -1695,7 +1695,7 @@
     "updater": "Aktualizacja",
     "updates-available": "Dostępne aktualizacje",
     "updates-available-p": "Dostępne są aktualizacje FacturaScripts. Proszę kliknąć w aktualizator i pobrać nową wersję. Aktualizacje naprawiają błędy i dodają nowe funkcje.",
-    "updates-beta-warning": "Aktualizacje beta są aktywowane",
+    "updates-beta-warning": "Aktualizacje beta są włączone",
     "updates-beta-warning-p": "⚠️ Aktualizacje beta są aktywowane. Te aktualizacje nie były testowane i są zalecane tylko w instalacjach testowych.",
     "updating-attached-relations": "Aktualizowanie powiązań z załączonymi plikami",
     "upload-file": "Prześlij plik",
