--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -2,7 +2,7 @@
     "2fa": "2FA",
     "abbreviated": "Abreviado",
     "about": "Acerca",
-    "acc-concept-required": "Debes introducir primero el concepto del asiento",
+    "acc-concept-required": "Você deve primeiro inserir o conceito da entrada",
     "accept": "Aceitar",
     "accept-all": "Aceptar todo",
     "accept-data": "Aceitar mudanças ou operação",
@@ -395,7 +395,7 @@
     "database": "Base de dados",
     "database-error": "Erro ao conectar à base de dados",
     "database-error-pc": "🖥️ Se o programa estiver instalado no seu PC, pode ter-se esquecido de ativar o MySQL ou ter problemas para ativá-lo.",
-    "database-error-server": "🌎 se o programa estiver instalado em um servidor ou hospedagem, você provavelmente alterou o usuário ou a senha do banco de dados, ou atingiu algum limite de uso da hospedagem.",
+    "database-error-server": "🌎 Se o programa estiver instalado em um servidor ou hospedagem, você provavelmente alterou o usuário ou a senha do banco de dados, ou atingiu algum limite de uso da hospedagem.",
     "database-name-must-be-lowercase": "O nome da base de dados deve estar em minúsculas",
     "date": "Data",
     "date-in": "Data de entrada",
