--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -930,7 +930,7 @@
     "list": "Lista",
     "load-def-acc-plan": "Carregar plano contabilístico predefinido",
     "loading-controller": "Controlador de carga: '0'",
-    "local-business-rental": "Alquiler locales",
+    "local-business-rental": "Aluguer de locais",
     "location": "Localização",
     "lock-accounting": "Bloquear contabilidade",
     "lock-entry": "Bloquear lançamento",
@@ -1453,7 +1453,7 @@
     "settlement": "Liquidação",
     "settlement-product": "Produto de liquidação",
     "settlements": "Liquidações",
-    "setup-manually": "Configuración manual",
+    "setup-manually": "Configuração manual",
     "setup-options": "Opções de configuração",
     "shipping": "Envio",
     "shipping-address": "Endereço de entrega",
