--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -631,7 +631,7 @@
     "export-bill": "Factura d'exportació",
     "extra-file": "Arxiu extra",
     "failed": "Fallit",
-    "fails": "Fallos",
+    "fails": "Errors",
     "families": "Famílies",
     "family": "Família",
     "family-code": "Codi de família",
@@ -895,7 +895,7 @@
     "last-activity": "Última activitat",
     "last-bimester": "El bimestre passat",
     "last-block": "Darrer bloc",
-    "last-duration": "Última duración",
+    "last-duration": "Última durada",
     "last-ip": "Darrera IP",
     "last-month": "El mes passat",
     "last-price-estimation": "Últim preu de pressupost",
