Actualizadas las traducciones.

--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -895,7 +895,7 @@
     "last-activity": "Last activity",
     "last-bimester": "Last bimester",
     "last-block": "Last block",
-    "last-duration": "Última duración",
+    "last-duration": "Last Duration",
     "last-ip": "Last IP",
     "last-month": "Last month",
     "last-price-estimation": "Last quote price",
