--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -2,7 +2,7 @@
     "2fa": "2FA",
     "abbreviated": "abbreviazione",
     "about": "Di",
-    "acc-concept-required": "Debes introducir primero el concepto del asiento",
+    "acc-concept-required": "Devi prima inserire il concetto della scrittura",
     "accept": "accettare",
     "accept-all": "Tutto accettato",
     "accept-data": "Accetta modifiche o operazioni",
@@ -673,7 +673,7 @@
     "fixed-value": "valore fisso",
     "flag": "Bandiera",
     "folder-not-writable": "Non è possibile scrivere sui FacturaScripts cartella.",
-    "folders-not-writable": "No se puede escribir sobre la carpeta de FacturaScripts: %folders%",
+    "folders-not-writable": "Non si può scrivere sulle cartelle di FacturaScripts: %folders%",
     "font": "Font",
     "font-size": "Dimensione del font",
     "footer": "Piè di pagina",
