--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -576,7 +576,7 @@
     "errors": "Błędy",
     "es_EC": "Hiszpański (Ekwador)",
     "es-tax-exception-art-14": "es-tax-exception-art-14",
-    "es-tax-exception-art-7": "es-tax-exception-art-7",
+    "es-tax-exception-art-7": "wyjątek podatkowy ES - art. 7",
     "es-tax-exception-e1": "Hiszpania: wyjątek na mocy artykułu 20 ustawy o VAT",
     "es-tax-exception-e2": "Hiszpania: wyjątek na mocy artykułu 21 ustawy o VAT",
     "es-tax-exception-e3": "Hiszpania: wyjątek z artykułu 22 ustawy o VAT",
@@ -1696,7 +1696,7 @@
     "updates-available": "Dostępne aktualizacje",
     "updates-available-p": "Dostępne są aktualizacje FacturaScripts. Proszę kliknąć w aktualizator i pobrać nową wersję. Aktualizacje naprawiają błędy i dodają nowe funkcje.",
     "updates-beta-warning": "Aktualizacje beta są włączone",
-    "updates-beta-warning-p": "⚠️ Aktualizacje beta są aktywowane. Te aktualizacje nie były testowane i są zalecane tylko w instalacjach testowych.",
+    "updates-beta-warning-p": "⚠️ Aktualizacje beta są włączone. Te aktualizacje nie były testowane i są zalecane jedynie w instalacjach testowych.",
     "updating-attached-relations": "Aktualizowanie powiązań z załączonymi plikami",
     "upload-file": "Prześlij plik",
     "uploaded-at": "Załadowano w",
