--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -1077,7 +1077,7 @@
     "no-reference": "Sense referència",
     "no-selected-item": "No hi ha cap element seleccionat",
     "no-stock": "No hi ha estoc",
-    "no-updates-now": "No hay actualizaciones en este momento",
+    "no-updates-now": "No hi ha actualitzacions en aquest moment",
     "non-editable-accounting-entry": "Assentament no editable",
     "non-editable-columns": "Columnes no editables: %columns%",
     "non-editable-document": "El document no es pot editar",
@@ -1649,7 +1649,7 @@
     "try-again-later": "Prova una atra volta més tart",
     "tuesday": "tuesday",
     "two-factor-auth": "Autenticació en 2 passos",
-    "two-factor-auth-disable": "Desactivar autenticación en 2 pasos",
+    "two-factor-auth-disable": "Desactivar l'autenticació en 2 passos",
     "two-factor-auth-disabled": "Autenticació en 2 passos desactivada",
     "two-factor-auth-enable": "Activar autenticació a 2 passos",
     "two-factor-auth-enabled": "Autenticació en 2 passos activada",
